Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
 <a id="semana-1-agosto-5" class="anchor" href="#semana-1-agosto-5" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 1) Agosto 5</h3>
 
 <ul>
-<li>Jaime Forero. Cómo funciona Astrolunch.</li>
-<li>Jaime Forero.</li>
+<li>Jaime Forero. <strong>Cómo funciona Astrolunch</strong>.</li>
+<li>Jaime Forero. <strong>El mejor mapa del Universo</strong>
+</li>
 </ul>
 
 <h3>
 <a id="semana-2-agosto-12" class="anchor" href="#semana-2-agosto-12" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 2) Agosto 12</h3>
 
 <ul>
-<li>Jaime Forero.  Detección de Ondas Gravitacionales por LIGO: entendiendo la importancia del gran descubrimiento científico del 2016. </li>
+<li>Jaime Forero.  <strong>Detección de Ondas Gravitacionales por LIGO.</strong> <em>Entendiendo la importancia del gran descubrimiento científico del 2016.</em>
+</li>
 </ul>
 
 <h3>
@@ -75,7 +77,8 @@
 <a id="semana-6-septiembre-9" class="anchor" href="#semana-6-septiembre-9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 6) Septiembre 9</h3>
 
 <ul>
-<li>Jaime Forero. Los orígenes cuánticos del Universo.</li>
+<li>Jaime Forero. <strong>Los orígenes cuánticos del Universo.</strong>
+</li>
 </ul>
 
 <h3>
