Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 <a id="semana-7-septiembre-16" class="anchor" href="#semana-7-septiembre-16" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 7) Septiembre 16</h3>
 
 <ul>
-<li>Germán Chaparro.</li>
+<li>Germán Chaparro. <strong>Planet formation timescales in density perturbed protoplanetary disks</strong>
+</li>
 </ul>
 
 <h3>
@@ -123,7 +124,8 @@
 <a id="semana-12-octubre-28" class="anchor" href="#semana-12-octubre-28" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 12) Octubre 28</h3>
 
 <ul>
-<li>Beatriz Sabogal. </li>
+<li>Beatriz Sabogal. <strong>Las misteriosas estrellas Be</strong>
+</li>
 </ul>
 
 <h3>
