Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 <a id="semana-5-septiembre-2" class="anchor" href="#semana-5-septiembre-2" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>(Semana 5) Septiembre 2</h3>
 
 <ul>
-<li>Sergio Hernández. </li>
+<li>Sergio Hernández. <strong>Laniakea en un contexto cosmológico</strong>
+</li>
 </ul>
 
 <h3>
